# llmmllab

./: .gitignore  GRPC_README.md  Makefile  PROTO_COMPATIBILITY_FIX.md  PROTO_TYPES_SOLUTION.md  context_ext_arch.html  context_extension.md  context_extension_fixed.md  docker-compose.grpc.yml  generate.sh  generate_go_proto.sh  generate_proto.sh  generate_proto_stubs.py  health_check.sh  integration_plan.md  protogen.json  protogen.py  pyrightconfig.json  regenerate_models.sh  regenerate_models_alt.sh  remote_cmd.sh  repos.html  start_services.sh  sync_protos.sh  test_grpc_integration.py  vllm_setup.md
dl/: group.5nipst  messages.csv  msgs.csv  passwd.b02veV
docs/: rabbitmq_integration.md  secure_image_editing.md
inference/: .dockerignore  Dockerfile  Dockerfile.Inference  Dockerfile.Inference.Base  Dockerfile.Inference.GRPC  Dockerfile.old  GGUF_README.md  README.md  README_CLI.md  __init__.py  app.py  config.py  (+33 more)
inference/runner/: README.md  __init__.py  pyproject.toml  requirements.txt  run_model.py
inference/runner/pipelines/: base_pipeline.py  factory.py  helpers.py
inference/runner/pipelines/emb/: nom2.py
inference/runner/pipelines/img2img/: flux.py  p2p.py  sdxl.py
inference/runner/pipelines/imgtxt2txt/: glm4v.py  glm4v_gguf.py  qwen25_vl_gguf.py
inference/runner/pipelines/txt2img/: flux.py  sd3.py  sdxl.py
inference/runner/pipelines/txt2txt/: qwen30a3b.py  qwen30a3b_q4km.py
inference/runner/scripts/: README.md  download.py  download_and_quantize.py  download_and_quantize_docs.md  download_docs.md  process_and_upload_model.py  upload_gguf.py
(+730 files in other folders)
